Add Terms & Policies section with WebView support
  - Add Terms of Service, Privacy Policy, and Support pages in docs/
  - Create WebViewScreen widget for displaying web content
  - Add AppUrls constants for documentation URLs
  - Integrate Terms & Policies section in Settings page
  - Add localization keys for all 12 supported languages
  - Add webview_flutter dependency

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -107,5 +107,10 @@
   "passThresholdDesc": "صحيح إذا تجاوز التشابه هذه القيمة",
   "about": "حول",
   "version": "الإصدار",
-  "licenses": "تراخيص المصادر المفتوحة"
+  "licenses": "تراخيص المصادر المفتوحة",
+
+  "termsAndPolicies": "الشروط والسياسات",
+  "termsOfService": "شروط الخدمة",
+  "privacyPolicy": "سياسة الخصوصية",
+  "support": "الدعم"
 }
