--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -107,5 +107,10 @@
   "passThresholdDesc": "この類似度以上で正解とする",
   "about": "情報",
   "version": "バージョン",
-  "licenses": "オープンソースライセンス"
+  "licenses": "オープンソースライセンス",
+
+  "termsAndPolicies": "利用規約とポリシー",
+  "termsOfService": "利用規約",
+  "privacyPolicy": "プライバシーポリシー",
+  "support": "サポート"
 }
