--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -107,5 +107,10 @@
   "passThresholdDesc": "Засчитывать как верно при сходстве выше этого значения",
   "about": "О приложении",
   "version": "Версия",
-  "licenses": "Лицензии с открытым кодом"
+  "licenses": "Лицензии с открытым кодом",
+
+  "termsAndPolicies": "Условия и политики",
+  "termsOfService": "Условия использования",
+  "privacyPolicy": "Политика конфиденциальности",
+  "support": "Поддержка"
 }
