--- a/lib/l10n/app_zh_Hant.arb
+++ b/lib/l10n/app_zh_Hant.arb
@@ -107,5 +107,10 @@
   "passThresholdDesc": "相似度達到此值即為正確",
   "about": "關於",
   "version": "版本",
-  "licenses": "開源授權"
+  "licenses": "開源授權",
+
+  "termsAndPolicies": "條款與政策",
+  "termsOfService": "服務條款",
+  "privacyPolicy": "隱私權政策",
+  "support": "支援"
 }
